--- a/django_app/myfirstapp/templates/index.html
+++ b/django_app/myfirstapp/templates/index.html
@@ -2,8 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <li><a href="{% url 'task1' %}">Task 1</a> </li>
-    <li><a href="#">Task 2</a></li>
+    <li><a href="{% url 'task1' %}">Production report</a> </li>
 </div>
 
 {% endblock %}
